err/products.simpleblog.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/SimpleBlog'...
Compiling './lib/python3.5/site-packages/Products/SimpleBlog/SimpleBlogTool.py'...
***   File "./lib/python3.5/site-packages/Products/SimpleBlog/SimpleBlogTool.py", line 146
    if globalCategories<>'':
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/SimpleBlog/browser'...
Listing './lib/python3.5/site-packages/Products/SimpleBlog/content'...
Listing './lib/python3.5/site-packages/Products/SimpleBlog/i18n'...
Listing './lib/python3.5/site-packages/Products/SimpleBlog/profiles'...
Listing './lib/python3.5/site-packages/Products/SimpleBlog/profiles/default'...
Listing './lib/python3.5/site-packages/Products/SimpleBlog/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/SimpleBlog/profiles/default/workflows'...
Listing './lib/python3.5/site-packages/Products/SimpleBlog/profiles/default/workflows/simpleblog_workflow'...
Listing './lib/python3.5/site-packages/Products/SimpleBlog/skins'...
Listing './lib/python3.5/site-packages/Products/SimpleBlog/skins/SimpleBlog'...
Compiling './lib/python3.5/site-packages/Products/SimpleBlog/skins/SimpleBlog/migrateBlogPortlets.py'...
***   File "./lib/python3.5/site-packages/Products/SimpleBlog/skins/SimpleBlog/migrateBlogPortlets.py", line 11
    return "Migration completed"
                                ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/SimpleBlog/tests'...
Compiling './lib/python3.5/site-packages/Products/SimpleBlog/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/SimpleBlog/tests/framework.py", line 69
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products.SimpleBlog-3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
